--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "base-x",
-  "version": "5.0.1",
+  "name": "@solana-web3-pack/base-x",
+  "version": "1.0.0",
   "description": "Fast base encoding / decoding of any given alphabet",
   "type": "module",
   "keywords": [
